--- a/index.html
+++ b/index.html
@@ -45,15 +45,16 @@
         footer {
                 text-align: center;
                 height: 100px;
+                border-top: solid 10px #4aaaa5
         }
-        body{background: lightgray;
+        body{background-image:url('circles-dark.png');
                 top:0%;
         }
         #picture{float: left;
                 width: 150px;
                 height: 150px;
                 background: grey;
-                padding: 20px;
+                padding: 1px;
                 border: 20px;   
                 margin-right: 10px;     
         }
@@ -70,6 +71,7 @@
                 background: white;
                 margin-top: 20px;
                 padding: 10px;
+                padding-bottom: 15px;
                 text-align: center;
     
         }
@@ -112,19 +114,18 @@
         <div id="main">
         <section id="about-me">
             <h1 style="color:#4aaaa5;">About Me</h1>   
-            <img id="picture" src="#" alt="profile pic">
+            <img id="picture" src="profile-pic.png" alt="profile pic">
             <p>My name is Josiah Pham and I'm on my journey to become a coder. Currently, I'm working part time at Mt. SAC up in Walnut, CA as an Adjunct ESL professor.
             If this coding boot camp works out I hope to find a job here in Orange County but I'm also open to work in other cities.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur minima, explicabo placeat id asperiores, dolore maxime voluptatum iusto accusamus quibusdam eius! Quidem iure sunt harum fugiat in, unde ipsam saepe.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis consequuntur, numquam porro iure deserunt aliquam excepturi reprehenderit officia quae impedit ullam eum nulla voluptates repellat. Dicta explicabo incidunt est dignissimos.
+            <p>I grew up overseas in Bangladesh, Mongolia and Taiwan and so I have a love for travel and experiencing new things, especially food. I hope that my experinces in different countries and my interaction with different cultures will be able to provide a uniquie look at how the world works and how to impact it. This coding bootcamp will hopefully allow me to add another set of skills that I will be able to use later on in life.
             </p>
         </section>
 
          <section id="sidebar">
             <h2 style="color:#4aaaa5;">Connect with Me</h2>
-            <a href="https://github.com/jphamxuan"> <img id="github" src="./assests/github.png"alt="github" style="width:50px;height:50px;"></a>
-            &nbsp&nbsp&nbsp<a href="https://www.linkedin.com/in/josiah-pham-b88a04155/"><img id="portfolio" src="./assests/linkedin.png"alt="github" style="width:50px;height:50px;"></a>
-            &nbsp&nbsp <a href="https://github.com/jphamxuan"><img id="stack" src="./assests/stackoverflow.svg"alt="github" style="width:50px;height:50px;"></a>
+            <a href="https://github.com/jphamxuan"> <img id="github" src="./assests/github.png"alt="github" hspace="10" style="width:50px;height:50px;"></a>
+           <a href="https://www.linkedin.com/in/josiah-pham-b88a04155/"><img id="portfolio" src="./assests/linkedin.png"alt="github" hspace="10" style="width:50px;height:50px;"></a>
+            <a href="https://github.com/jphamxuan"><img id="stack" src="./assests/stackoverflow.svg"alt="github" hspace="10" style="width:50px;height:50px;"></a>
             
         </section>
 
