--- a/portfolio.html
+++ b/portfolio.html
@@ -137,7 +137,7 @@
                         <td>
                                 <div class="container">
                         
-                                <a href="#"> <img src="./jp.jpg"alt="1" style="width:250px;height:250px;">
+                                <a href="#"> <img src="./jp.png"alt="1" style="width:250px;height:250px;">
                                 </a>
                                 <div class="text-block"> 
                                         <h4>Example 1</h4>
@@ -146,7 +146,7 @@
                         </td>
                         <td>
                                 <div class="container">
-                                <a href="#"> <img src="jp.jpg"alt="2" style="width:250px;height:250px;"></a> 
+                                <a href="#"> <img src="jp.png"alt="2" style="width:250px;height:250px;"></a> 
                                 <div class="text-block"> 
                                                 <h4>Example 2</h4>
                                 </div>
@@ -156,7 +156,7 @@
                 <tr>
                         <td>
                                  <div class="container">
-                                                <a href="#"> <img src="jp.jpg"alt="3" style="width:250px;height:250px;"></a>
+                                                <a href="#"> <img src="jp.png"alt="3" style="width:250px;height:250px;"></a>
                                                 <div class="text-block"> 
                                                                 <h4>Example 3</h4>
                                                 </div>
@@ -165,7 +165,7 @@
                         </td>
                         <td>
                                         <div class="container">
-                                                <a href="#"> <img src="jp.jpg"alt="4" style="width:250px;height:250px;"></a>
+                                                <a href="#"> <img src="jp.png"alt="4" style="width:250px;height:250px;"></a>
                                                 <div class="text-block"> 
                                                                 <h4>Example 4</h4>
                                                 </div>
@@ -175,7 +175,7 @@
                 <tr>
                          <td>
                                         <div class="container">
-                                                <a href="#"> <img src="jp.jpg"alt="5" style="width:250px;height:250px;"></a>
+                                                <a href="#"> <img src="jp.png"alt="5" style="width:250px;height:250px;"></a>
                                                 <div class="text-block"> 
                                                                 <h4>Example 5</h4>
                                                 </div>
