--- a/contact.html
+++ b/contact.html
@@ -80,6 +80,12 @@ h2, h3{border-bottom: 2px solid lightgrey;
 .navbar{
         font-family: 'Kaushan Script', cursive;
       }
+#emailBtn{
+    color:white ;
+}
+#links{
+    font-size: 45px;
+}
 </style>  
 </head>
 <header>
@@ -99,11 +105,11 @@ h2, h3{border-bottom: 2px solid lightgrey;
              </section> 
              <section class="col-md-4"> 
                      <nav class="navbar navbar-default navbar-fixed-top">
-                             <div class="container ">
+                             <div class="container " id="links">
                                     
-                                            <a href="index.html" style="text-decoration : none; color :darkgrey; font-size: 20px">About</a>
-                                            <a href="portfolio.html" style="text-decoration : none; color :darkgrey; font-size: 20px">Portfolio</a>
-                                            <a href="contact.html" style="text-decoration : none; color :darkgrey; font-size: 20px">Contact</a>
+                                            <a href="index.html" style="text-decoration : none; color :darkgrey; font-size: 30px">About</a>
+                                            <a href="portfolio.html" style="text-decoration : none; color :darkgrey; font-size: 30px">Portfolio</a>
+                                            <!-- <a href="contact.html" style="text-decoration : none; color :darkgrey; font-size: 20px">Contact</a> -->
                              </div>     
                       </nav>    
              </section>                          
@@ -130,7 +136,7 @@ h2, h3{border-bottom: 2px solid lightgrey;
                                  <label for="exampleFormControlTextarea1">Message</label>
                                  <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
                                </div>
-                               <button type="submit" class="btn btn-primary">Submit</button>
+                               <button  class="btn btn-primary"><a  id="emailBtn" href="mailto:josiah.pham@gmail.com?Subject=" target="_top">E-mail</a></button>
                              </form>
                 
            </div>
