got rid of stacked overflow link

--- a/portfolio.html
+++ b/portfolio.html
@@ -181,7 +181,7 @@ h2, h3{border-bottom: 2px solid lightgrey;
                         <div class="footer-copyright text-center py-3" id="footer">
                           <a href="https://github.com/jphamxuan"> <img id="github" src="github.png"alt="github" hspace="10" style="width:50px;height:50px;"></a>
                           <a href="https://www.linkedin.com/in/josiah-pham-b88a04155/"><img id="portfolio" src="linkedin.png"alt="linkedin" hspace="10" style="width:50px;height:50px;"></a>
-                          <a href="https://github.com/jphamxuan"><img id="stack" src="stackoverflow.svg"alt="stacked" hspace="10" style="width:50px;height:50px;"></a>
+                          <!-- <a href="https://github.com/jphamxuan"><img id="stack" src="stackoverflow.svg"alt="stacked" hspace="10" style="width:50px;height:50px;"></a> -->
                           <a id="emailBtn" href="mailto:josiah.pham@gmail.com?Subject="><img id="gmail.com" src="gmail.png"alt="stacked" hspace="10" style="width:50px;height:50px;"></a>
                           <div></div>
                           <div style="margin:5px"> <p >© Copyright 2018 Josiah Pham</p></div>
