--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     body{
         background-image: url('ocean.png');
         background-repeat: no-repeat,repeat;
-        background-position: center; 
-        background-position: top 50px;
+        background-position-x: center;
+        background-position-y: 62%; 
         font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
         /* background-position: 700px 210px; */
       }
@@ -164,7 +164,7 @@
       <div class="footer-copyright text-center py-3" id="footer">
         <a href="https://github.com/jphamxuan"> <img id="github" src="github.png"alt="github" hspace="10" style="width:50px;height:50px;"></a>
         <a href="https://www.linkedin.com/in/josiah-pham-b88a04155/"><img id="portfolio" src="linkedin.png"alt="linkedin" hspace="10" style="width:50px;height:50px;"></a>
-        <a href="https://github.com/jphamxuan"><img id="stack" src="stackoverflow.svg"alt="stacked" hspace="10" style="width:50px;height:50px;"></a>
+        <!-- <a href="https://github.com/jphamxuan"><img id="stack" src="stackoverflow.svg"alt="stacked" hspace="10" style="width:50px;height:50px;"></a> -->
         <a id="emailBtn" href="mailto:josiah.pham@gmail.com?Subject="><img id="gmail.com" src="gmail.png"alt="stacked" hspace="10" style="width:50px;height:50px;"></a>
         <!-- <br /> -->
         <div style="margin:5px"> <p >© Copyright 2018 Josiah Pham</p></div>
