fixing issue with html page

--- a/portfolio.html
+++ b/portfolio.html
@@ -137,7 +137,7 @@ h2, h3{border-bottom: 2px solid lightgrey;
                              <!-- <h2 style="text-align: left;">Portfolio</h2> -->
                     <div class="row examples">
                         <div class="col-md-6">
-                                <a href="https://github.com/jphamxuan/pick-a-pal"> <img src="jp.png"alt="2" style="width:200px;height:200px;"></a> 
+                                <a href="https://jphamxuan.github.io/pick-a-pal/"> <img src="jp.png"alt="2" style="width:200px;height:200px;"></a> 
                                 <div class="carousel-caption">
                                         <h1>Pick-a-Pal</h1>
                                 </div>
@@ -152,13 +152,13 @@ h2, h3{border-bottom: 2px solid lightgrey;
                     </div>
                     <div class="row examples">
                             <div class="col-md-6">
-                                    <a href="https://github.com/jphamxuan/Psychic-game"> <img src="jp.png"alt="2" style="width:200px;height:200px;"></a> 
+                                    <a href="https://jphamxuan.github.io/Psychic-game/"> <img src="jp.png"alt="2" style="width:200px;height:200px;"></a> 
                                     <div class="carousel-caption">
                                             <h1>Psychic Game</h1>
                                     </div>
                             </div>
                             <div class="col-md-6">
-                                    <a href="https://github.com/jphamxuan/week-4-game"> <img src="jp.png"alt="2" style="width:200px;height:200px;"></a> 
+                                    <a href="https://jphamxuan.github.io/week-4-game/"> <img src="jp.png"alt="2" style="width:200px;height:200px;"></a> 
                                     <div class="carousel-caption">
                                             <h1>Meme Team RPG Game</h1>
                                     </div>
@@ -166,7 +166,7 @@ h2, h3{border-bottom: 2px solid lightgrey;
                         </div>
                         <div class="row examples">
                                 <div class="col-md-6">
-                                        <a href="https://github.com/jphamxuan/train-scheduler"> <img src="jp.png"alt="2" style="width:200px;height:200px;"></a> 
+                                        <a href="https://jphamxuan.github.io/train-scheduler/"> <img src="jp.png"alt="2" style="width:200px;height:200px;"></a> 
                                         <div class="carousel-caption">
                                                 <h1>Train Scheduler</h1>
                                         </div>
