--- a/portfolio.html
+++ b/portfolio.html
@@ -144,7 +144,7 @@ h2, h3{border-bottom: 2px solid lightgrey;
                                 
                         </div>
                         <div class="col-md-6">
-                                <a href="https://github.com/JGSilverman/Zapper"> <img src="jp.png"alt="2" style="width:200px;height:200px;"></a> 
+                                <a href="https://intense-ridge-17029.herokuapp.com/"> <img src="jp.png"alt="2" style="width:200px;height:200px;"></a> 
                                 <div class="carousel-caption">
                                         <h1>Zapper</h1>
                                 </div>
